--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="header-menu-list">
             <li class="header-menu-item">
-              <a class="header-menu-link" href="./index.html">Studio</a>
+              <a class="header-menu-link control" href="./index.html">Studio</a>
             </li>
             <li class="header-menu-item">
               <a class="header-menu-link" href="">Portfolio</a>
@@ -61,7 +61,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero hero-wrap">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-buy-btn" type="button">Order Service</button>
@@ -73,6 +73,11 @@
           <h2 class="features-hidden">Information</h2>
           <ul class="features-list">
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="features-icon-content" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -80,6 +85,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="features-icon-content" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -87,6 +97,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="features-icon-content" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-item-text">
                 Research and confirm brands that present the strongest digital
@@ -94,6 +109,11 @@
               </p>
             </li>
             <li class="features-item">
+              <div class="features-icon">
+                <svg class="features-icon-content" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-item-text">
                 Design practice focused on digital experiences. We bring forth a
