--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           <ul class="team-list">
             <li class="team-item">
               <img
+                class="img"
                 src="./images/img_1.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -138,6 +139,36 @@
               <div class="team-item-title">
                 <h3 class="team-item-name">Mark Guerrero</h3>
                 <p class="team-item-prof">Product Designer</p>
+                <ul class="team-item-icons">
+                  <li class="team-item-contact">
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -150,6 +181,36 @@
               <div class="team-item-title">
                 <h3 class="team-item-name">Tom Ford</h3>
                 <p class="team-item-prof">Frontend Developer</p>
+                <ul class="team-item-icons">
+                  <li class="team-item-contact">
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -162,6 +223,36 @@
               <div class="team-item-title">
                 <h3 class="team-item-name">Camila Garcia</h3>
                 <p class="team-item-prof">Marketing</p>
+                <ul class="team-item-icons">
+                  <li class="team-item-contact">
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -174,17 +265,53 @@
               <div class="team-item-title">
                 <h3 class="team-item-name">Daniel Wilson</h3>
                 <p class="team-item-prof">UI Designer</p>
+                <ul class="team-item-icons">
+                  <li class="team-item-contact">
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li>
+                    <a class="soc-link" href="">
+                      <svg class="soc-link-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
+
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item">
-              <img src="./images/img_5.jpg" alt="Banking App" width="360" />
+            <li class="portfolio-item portfolio-shadow">
+              <img
+                class="img"
+                src="./images/img_5.jpg"
+                alt="Banking App"
+                width="360"
+              />
               <div class="portfolio-capt-item">
                 <h3 class="portfolio-caption">Banking App</h3>
                 <p class="portfolio-text">App</p>
