--- a/index.html
+++ b/index.html
@@ -306,72 +306,125 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item portfolio-shadow">
-              <img
-                class="img"
-                src="./images/img_5.jpg"
-                alt="Banking App"
-                width="360"
-              />
+              <div class="port-img-text">
+                <img
+                  class="img"
+                  src="./images/img_5.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-capt-item">
                 <h3 class="portfolio-caption">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/img_6.jpg"
-                alt="Cashless Payment"
-                width="360"
-              />
+            <li class="portfolio-item portfolio-shadow">
+              <div class="port-img-text">
+                <img
+                  class="img"
+                  src="./images/img_6.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-capt-item">
                 <h3 class="portfolio-caption">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
+              <div>
+                <svg class="finger" width="16" height="16">
+                  <use href="./images/icons.svg#icon-Finger"></use>
+                </svg>
+              </div>
             </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/img_7.jpg"
-                alt="Meditation App"
-                width="360"
-              />
+            <li class="portfolio-item portfolio-shadow">
+              <div class="port-img-text">
+                <img
+                  class="img"
+                  src="./images/img_7.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-capt-item">
                 <h3 class="portfolio-caption">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/img_8.jpg"
-                alt="Taxi Service"
-                width="360"
-              />
+            <li class="portfolio-item portfolio-shadow">
+              <div class="port-img-text">
+                <img
+                  class="img"
+                  src="./images/img_8.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-capt-item">
                 <h3 class="portfolio-caption">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/img_9.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
+            <li class="portfolio-item portfolio-shadow">
+              <div class="port-img-text">
+                <img
+                  class="img"
+                  src="./images/img_9.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-capt-item">
                 <h3 class="portfolio-caption">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/img_10.jpg"
-                alt="Online Courses"
-                width="360"
-              />
+            <li class="portfolio-item portfolio-shadow">
+              <div class="port-img-text">
+                <img
+                  class="img"
+                  src="./images/img_10.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="port-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-capt-item">
                 <h3 class="portfolio-caption">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -382,14 +435,49 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-link">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-cont">
+        <div class="icon-footer">
+          <a class="footer-logo log-f" href="./index.html"
+            >Web<span class="footer-logo-link">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <p class="soc-media">Social media</p>
+          <ul class="soc-footer">
+            <li class="footer-soc-link">
+              <a class="soc-link" href="">
+                <svg class="soc-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-link">
+              <a class="soc-link" href="">
+                <svg class="soc-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-link">
+              <a class="soc-link" href="">
+                <svg class="soc-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-link">
+              <a class="soc-link" href="">
+                <svg class="soc-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
