--- a/index.html
+++ b/index.html
@@ -147,21 +147,21 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
