--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
             </li>
             <li class="team-item">
               <img
+                class="img"
                 src="./images/img_2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -189,21 +190,21 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -215,6 +216,7 @@
             </li>
             <li class="team-item">
               <img
+                class="img"
                 src="./images/img_3.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -231,21 +233,21 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -257,6 +259,7 @@
             </li>
             <li class="team-item">
               <img
+                class="img"
                 src="./images/img_4.jpg"
                 alt="Daniel Wilson"
                 width="264"
@@ -273,21 +276,21 @@
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="team-item-contact">
                     <a class="soc-link" href="">
                       <svg class="soc-link-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
