--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </header>
     <main>
-      <section class="hero hero-wrap">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-buy-btn" type="button">Order Service</button>
